--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="row g-3">                
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4911.jpg" alt="Timbre Trodat 4911" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4911 CLP 11.500</h5>                           
@@ -120,7 +120,7 @@
                         </div>
                     </div>                
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4912.jpg" alt="Timbre Trodat 4912" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4912 CLP 12.500</h5>
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4913.jpg" alt="Timbre Trodat 4913" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4913</h5>
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4914.jpg" alt="Timbre Trodat 4914" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4914</h5>
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4915.jpg" alt="Timbre Trodat 4915" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4915</h5>
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4916.jpg" alt="Timbre Trodat 4916" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4916</h5>
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4917.jpg" alt="Timbre Trodat 4917" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4917</h5>
@@ -173,7 +173,7 @@
                             </div>
                         </div>
                     </div><div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4918.jpg" alt="Timbre Trodat 4918" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4918</h5>
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4922.jpg" alt="Timbre Trodat 4922" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4922</h5>
@@ -191,7 +191,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4923.jpg" alt="Timbre Trodat 4923" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4923</h5>
@@ -200,7 +200,7 @@
                         </div>
                     </div>              
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4924.jpg" alt="Timbre Trodat 4924" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4924</h5>                            
@@ -208,7 +208,7 @@
                         </div>
                     </div>     
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4925.jpg" alt="Timbre Trodat 4925" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4925</h5>                            
@@ -216,7 +216,7 @@
                         </div>
                     </div>        
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4926.jpg" alt="Timbre Trodat 4926" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4926</h5>                            
@@ -224,7 +224,7 @@
                         </div>
                     </div>   
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4927.jpg" alt="Timbre Trodat 4927" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4927</h5>                            
@@ -233,7 +233,7 @@
                     </div>     
                     
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4928.jpg" alt="Timbre Trodat 4928" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4928</h5>                            
@@ -241,7 +241,7 @@
                         </div>
                     </div>   
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4929.jpg" alt="Timbre Trodat 4929" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4929</h5>                            
@@ -249,7 +249,7 @@
                         </div>
                     </div>       
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4931.jpg" alt="Timbre Trodat 4931" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4931</h5>                            
@@ -257,7 +257,7 @@
                         </div>
                     </div>         
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4933.jpg" alt="Timbre Trodat 4933" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4933</h5>                            
@@ -265,7 +265,7 @@
                         </div>
                     </div>      
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4612.jpg" alt="Timbre Trodat 4612" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4612</h5>                            
@@ -273,7 +273,7 @@
                         </div>
                     </div> 
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_46019.jpg" alt="Timbre Trodat 46019" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 46019</h5>                            
@@ -281,7 +281,7 @@
                         </div>
                     </div>    
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4630.jpg" alt="Timbre Trodat 4630" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4630</h5>                            
@@ -289,7 +289,7 @@
                         </div>
                     </div>      
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4638.jpg" alt="Timbre Trodat 4638" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4638</h5>                            
@@ -297,7 +297,7 @@
                         </div>
                     </div>    
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4642.jpg" alt="Timbre Trodat 4642" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4642</h5>                            
@@ -305,7 +305,7 @@
                         </div>
                     </div>     
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem">
+                        <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_46045.jpg" alt="Timbre Trodat 46045" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 46045</h5>                            
