Varios cambios en products

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                     <p class="lead text-muted">Sorprendentes ofertas</p>
                 </div>
                 <div class="row g-3">                
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem;">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4911.jpg" alt="Timbre Trodat 4911" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4911 CLP 11.500</h5>                           
@@ -120,7 +120,7 @@
                         </div>
                     </div>                
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4912.jpg" alt="Timbre Trodat 4912" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4912 CLP 12.500</h5>
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4913.jpg" alt="Timbre Trodat 4913" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4913</h5>
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4914.jpg" alt="Timbre Trodat 4914" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4914</h5>
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4915.jpg" alt="Timbre Trodat 4915" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4915</h5>
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4916.jpg" alt="Timbre Trodat 4916" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4916</h5>
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4917.jpg" alt="Timbre Trodat 4917" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4917</h5>
@@ -173,7 +173,7 @@
                             </div>
                         </div>
                     </div><div class="col-12 col-md-6 col-lg-4 text-center">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4918.jpg" alt="Timbre Trodat 4918" class="card-img-top  img-fluid">
                             <div class="card-body">
                                 <h5 class="card-title">Timbre Trodat 4918</h5>
