--- a/index.html
+++ b/index.html
@@ -110,15 +110,19 @@
                     <h2 class="display-6">Aquí encontrarás tus timbres de impresión y grabados en Santiago</h2>    
                     <p class="lead text-muted">Sorprendentes ofertas</p>
                 </div>
-                <div class="row g-3">                
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card text-center" style= "width:18rem;">
-                            <img src="assets/imgs/portada_trodat_4911.jpg" alt="Timbre Trodat 4911" class="card-img-top  img-fluid">
-                            <div class="card-body text-center mb-5">
-                                <h5 class="card-title">Timbre Trodat 4911</h5>
-                                <p class="card-text lead">CLP 11.500</p>                       
+                <div class="row">   <!-- before row-g3-->             
+                    <!-- <div class="col-12 col-md-6 col-lg-4"> <-->
+                    <div class="col-md-4 col-xl-3">
+                            <!-- before <div class="card text-center" style= "width:18rem;"><-->
+                            <div class="card">
+                                <img class="card-img-top  img-fluid" 
+                                    src="assets/imgs/portada_trodat_4911.jpg" 
+                                    alt="Timbre Trodat 4911" >
+                                <div class="card-body text-center mb-5">
+                                    <h5 class="card-title">Timbre Trodat 4911</h5>
+                                    <p class="card-text lead">CLP 11.500</p>                       
+                                </div>
                             </div>
-                        </div>
                     </div>                
                     <div class="col-12 col-md-6 col-lg-4 text-center">
                         <div class="card text-center" style= "width:18rem;">
