--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="row">   <!-- before row-g3-->             
                     <!-- <div class="col-12 col-md-6 col-lg-4"> <-->
-                    <div class="col-md-4 col-xl-3">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                             <!-- before <div class="card text-center" style= "width:18rem;"><-->
                             <div class="card">
                                 <img class="card-img-top  img-fluid" 
