--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 </div>
                             </div>
                     </div>                
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4912.jpg" alt="Timbre Trodat 4912" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4913.jpg" alt="Timbre Trodat 4913" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -143,7 +143,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4914.jpg" alt="Timbre Trodat 4914" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -152,7 +152,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4915.jpg" alt="Timbre Trodat 4915" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -161,7 +161,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4916.jpg" alt="Timbre Trodat 4916" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -170,7 +170,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4917.jpg" alt="Timbre Trodat 4917" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -178,7 +178,8 @@
                             
                             </div>
                         </div>
-                    </div><div class="col-12 col-md-6 col-lg-4 text-center">
+                    </div>
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card text-center" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4918.jpg" alt="Timbre Trodat 4918" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -187,7 +188,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4922.jpg" alt="Timbre Trodat 4922" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -196,7 +197,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4923.jpg" alt="Timbre Trodat 4923" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -205,7 +206,7 @@
                             </div>
                         </div>
                     </div>              
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4924.jpg" alt="Timbre Trodat 4924" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -213,7 +214,7 @@
                             </div>
                         </div>
                     </div>     
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4925.jpg" alt="Timbre Trodat 4925" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -221,7 +222,7 @@
                             </div>
                         </div>
                     </div>        
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4926.jpg" alt="Timbre Trodat 4926" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -229,7 +230,7 @@
                             </div>
                         </div>
                     </div>   
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4927.jpg" alt="Timbre Trodat 4927" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -238,7 +239,7 @@
                         </div>
                     </div>     
                     
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4928.jpg" alt="Timbre Trodat 4928" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -246,7 +247,7 @@
                             </div>
                         </div>
                     </div>   
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4929.jpg" alt="Timbre Trodat 4929" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -254,7 +255,7 @@
                             </div>
                         </div>
                     </div>       
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4931.jpg" alt="Timbre Trodat 4931" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -262,7 +263,7 @@
                             </div>
                         </div>
                     </div>         
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4933.jpg" alt="Timbre Trodat 4933" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -270,7 +271,7 @@
                             </div>
                         </div>
                     </div>      
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4612.jpg" alt="Timbre Trodat 4612" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -278,7 +279,7 @@
                             </div>
                         </div>
                     </div> 
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_46019.jpg" alt="Timbre Trodat 46019" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -286,7 +287,7 @@
                             </div>
                         </div>
                     </div>    
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4630.jpg" alt="Timbre Trodat 4630" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -294,7 +295,7 @@
                             </div>
                         </div>
                     </div>      
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4638.jpg" alt="Timbre Trodat 4638" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -302,7 +303,7 @@
                             </div>
                         </div>
                     </div>    
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_4642.jpg" alt="Timbre Trodat 4642" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
@@ -310,7 +311,7 @@
                             </div>
                         </div>
                     </div>     
-                    <div class="col-12 col-md-6 col-lg-4 text-center">
+                    <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card" style= "width:18rem;">
                             <img src="assets/imgs/portada_trodat_46045.jpg" alt="Timbre Trodat 46045" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
