--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             </div>
                     </div>                
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card text-center" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4912.jpg" alt="Timbre Trodat 4912" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4912</h5>
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card text-center" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4913.jpg" alt="Timbre Trodat 4913" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4913</h5>
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card text-center" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4914.jpg" alt="Timbre Trodat 4914" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4914</h5>
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card text-center" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4915.jpg" alt="Timbre Trodat 4915" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4915</h5>
@@ -162,7 +162,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card text-center" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4916.jpg" alt="Timbre Trodat 4916" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4916</h5>
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card text-center" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4917.jpg" alt="Timbre Trodat 4917" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4917</h5>
@@ -180,7 +180,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card text-center" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4918.jpg" alt="Timbre Trodat 4918" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4918</h5>
@@ -189,7 +189,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4922.jpg" alt="Timbre Trodat 4922" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4922</h5>
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4923.jpg" alt="Timbre Trodat 4923" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4923</h5>
@@ -207,7 +207,7 @@
                         </div>
                     </div>              
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4924.jpg" alt="Timbre Trodat 4924" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4924</h5>                            
@@ -215,7 +215,7 @@
                         </div>
                     </div>     
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4925.jpg" alt="Timbre Trodat 4925" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4925</h5>                            
@@ -223,7 +223,7 @@
                         </div>
                     </div>        
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4926.jpg" alt="Timbre Trodat 4926" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4926</h5>                            
@@ -231,7 +231,7 @@
                         </div>
                     </div>   
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4927.jpg" alt="Timbre Trodat 4927" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4927</h5>                            
@@ -240,7 +240,7 @@
                     </div>     
                     
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4928.jpg" alt="Timbre Trodat 4928" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4928</h5>                            
@@ -248,7 +248,7 @@
                         </div>
                     </div>   
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4929.jpg" alt="Timbre Trodat 4929" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4929</h5>                            
@@ -256,7 +256,7 @@
                         </div>
                     </div>       
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4931.jpg" alt="Timbre Trodat 4931" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4931</h5>                            
@@ -264,7 +264,7 @@
                         </div>
                     </div>         
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4933.jpg" alt="Timbre Trodat 4933" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4933</h5>                            
@@ -272,7 +272,7 @@
                         </div>
                     </div>      
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4612.jpg" alt="Timbre Trodat 4612" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4612</h5>                            
@@ -280,7 +280,7 @@
                         </div>
                     </div> 
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_46019.jpg" alt="Timbre Trodat 46019" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 46019</h5>                            
@@ -288,7 +288,7 @@
                         </div>
                     </div>    
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4630.jpg" alt="Timbre Trodat 4630" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4630</h5>                            
@@ -296,7 +296,7 @@
                         </div>
                     </div>      
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4638.jpg" alt="Timbre Trodat 4638" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4638</h5>                            
@@ -304,7 +304,7 @@
                         </div>
                     </div>    
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_4642.jpg" alt="Timbre Trodat 4642" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
                                 <h5 class="card-title">Timbre Trodat 4642</h5>                            
@@ -312,13 +312,13 @@
                         </div>
                     </div>     
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card" style= "width:18rem;">
+                        <div class="card">
                             <img src="assets/imgs/portada_trodat_46045.jpg" alt="Timbre Trodat 46045" class="card-img-top  img-fluid">
                             <div class="card-body text-center mb-5">
-                                <h5 class="card-title">Timbre Trodat 46045</h5>                            
+                                <h5 class="card-title">Timbre Trodat 46045</h5>                           
                             </div>
-                        </div>
-                    </div>                                                                                                                                                                                
+                        </div>   
+                    </div>                                                                                                                                                                               
                 </div>
             </div> 
             <br><br>
