--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </header> 
         </section>
         <section id="products" class="py-5 bg-light">
-            <div class="container-lg"> <!-- Before container-->
+            <div class="container-lg text-center"> <!-- Before container-->
                 <div class="text-center">
                     <!--<h2 class="text-center seccion-titulo">Aquí resolverás tus requerimientos de timbres de impresión y grabados en Santiago</h1><-->
                     <h2 class="display-6">Aquí encontrarás tus timbres de impresión y grabados en Santiago</h2>    
