--- a/index.html
+++ b/index.html
@@ -114,14 +114,16 @@
                     <!-- <div class="col-12 col-md-6 col-lg-4"> <-->
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                             <!-- before <div class="card text-center" style= "width:18rem;"><-->
-                            <div class="card">
-                                <img class="card-img-top  img-fluid" 
-                                    src="assets/imgs/portada_trodat_4911.jpg" 
-                                    alt="Timbre Trodat 4911" >
-                                <div class="card-body text-center mb-5">
-                                    <h5 class="card-title">Timbre Trodat 4911</h5>
-                                    <p class="card-text lead">CLP 11.500</p>                       
-                                </div>
+                            <div class="card"> 
+                                <center>
+                                    <img class="card-img-top  img-fluid" 
+                                        src="assets/imgs/portada_trodat_4911.jpg" 
+                                        alt="Timbre Trodat 4911" >
+                                    <div class="card-body text-center mb-5">
+                                        <h5 class="card-title">Timbre Trodat 4911</h5>
+                                        <p class="card-text lead">CLP 11.500</p>                       
+                                    </div>
+                                </center>   
                             </div>
                     </div>                
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
