--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
                     <h2 class="display-6">Aquí encontrarás tus timbres de impresión y grabados en Santiago</h2>    
                     <p class="lead text-muted">Sorprendentes ofertas</p>
                 </div>
-                <div class="row">   <!-- before row-g3-->             
+                <div class="row py-5">   <!-- before row-g3-->             
                     <!-- <div class="col-12 col-md-6 col-lg-4"> <-->
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                             <!-- before <div class="card text-center" style= "width:18rem;"><-->
-                        <div class="card"> 
-                            <center>
+                        <div class="card" width="100%"> 
+                            <!-- <center> -->
                                 <img class="card-img-top  img-fluid" 
                                     src="assets/imgs/portada_trodat_4911.jpg" 
                                     alt="Timbre Trodat 4911" >
@@ -123,7 +123,7 @@
                                     <h5 class="card-title">Timbre Trodat 4911</h5>
                                     <p class="card-text lead">CLP 11.500</p>                       
                                 </div>
-                            </center>   
+                            <!-- </center>   -->
                         </div>
                     </div>                
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
