--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <!-- <div class="col-12 col-md-6 col-lg-4"> <-->
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                             <!-- before <div class="card text-center" style= "width:18rem;"><-->
-                        <div class="card" width="100%"> 
+                        <div class="card" style="width: 100%;"> 
                             <!-- <center> -->
                                 <img class="card-img-top  img-fluid" 
                                     src="assets/imgs/portada_trodat_4911.jpg" 
@@ -127,7 +127,7 @@
                         </div>
                     </div>                
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
-                        <div class="card">
+                        <div class="card mx-auto" >
                             <center>
                                 <img src="assets/imgs/portada_trodat_4912.jpg" alt="Timbre Trodat 4912" class="card-img-top  img-fluid">
                                 <div class="card-body text-center mb-5">
