--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <!-- <div class="col-12 col-md-6 col-lg-4"> <-->
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                             <!-- before <div class="card text-center" style= "width:18rem;"><-->
-                        <div class="card mx-auto" style="width: 100%;"> 
+                        <div class="card mx-auto"> 
                             <!-- <center> -->
                                 <img class="card-img-top  img-fluid" 
                                     src="assets/imgs/portada_trodat_4911.jpg" 
