--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <h2 class="display-6">Aquí encontrarás tus timbres de impresión y grabados en Santiago</h2>    
                     <p class="lead text-muted">Sorprendentes ofertas</p>
                 </div>
-                <div class="row-g3 py-5">   <!-- before row-g3-->             
+                <div class="row py-5">   <!-- before row-g3-->             
                     <!-- <div class="col-12 col-md-6 col-lg-4"> <-->
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                             <!-- before <div class="card text-center" style= "width:18rem;"><-->
