--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                             <!-- before <div class="card text-center" style= "width:18rem;"><-->
                         <div class="card"> 
-                            <center>
-                                <img class="card-img-top  img-fluid" 
+                            
+                                <img class="card-img-top mx-auto img-fluid" 
                                     src="assets/imgs/portada_trodat_4911.jpg" 
                                     alt="Timbre Trodat 4911" >
                                 <div class="card-body text-center mb-5">
                                     <h5 class="card-title">Timbre Trodat 4911</h5>
                                     <p class="card-text lead">CLP 11.500</p>                       
                                 </div>
-                            </center>
+                            
                         </div>
                     </div>                
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
@@ -140,7 +140,7 @@
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                         <div class="card">
                             <center>
-                                <img src="assets/imgs/portada_trodat_4913.jpg" alt="Timbre Trodat 4913" class="card-img-top  img-fluid">
+                                <img src="assets/imgs/portada_trodat_4913.jpg" alt="Timbre Trodat 4913" class="card-img-top mx-auto  img-fluid">
                                 <div class="card-body text-center mb-5">
                                     <h5 class="card-title">Timbre Trodat 4913</h5>
                                     <p class="card-text lead">CLP 13.500</p>                                  
