--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 <img src="assets/imgs/portada_trodat_4913.jpg" alt="Timbre Trodat 4913" class="card-img-top mx-auto mx-auto  img-fluid">
                                 <div class="card-body text-center mb-5">
                                     <h5 class="card-title">Timbre Trodat 4913</h5>
-                                    <p class="card-text lead">CLP 13.500 VEA</p>                                  
+                                    <p class="card-text lead">CLP 13.500 hi</p>                                  
                                 </div>
                                                       
                         </div>
