--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
                     <!-- <div class="col-12 col-md-6 col-lg-4"> <-->
                     <div class="col-12 col-xs-6 col-sm-6 col-md-4 col-xl-3">
                             <!-- before <div class="card text-center" style= "width:18rem;"><-->
-                        <div class="card"> 
+                        <div class="card border-0"> 
                             
                                 <img class="card-img-top mx-auto mt-0 img-fluid" 
                                     src="assets/imgs/portada_trodat_4911.jpg" 
                                     alt="Timbre Trodat 4911" >
                                 <div class="card-body text-center mb-5">
                                     <h5 class="card-title">Timbre Trodat 4911</h5>
-                                    <p class="card-text lead">CLP 11.500 OJO</p>                       
+                                    <p class="card-text lead">CLP 11.500 Border0</p>                       
                                 </div>
                             
                         </div>
