--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <!-- before <div class="card text-center" style= "width:18rem;"><-->
                         <div class="card border-0"> 
                             
-                                <img class="card-img-top mx-auto mt-0 img-fluid" 
+                                <img class="card-img-top  img-fluid" 
                                     src="assets/imgs/portada_trodat_4911.jpg" 
                                     alt="Timbre Trodat 4911" >
                                 <div class="card-body text-center mb-5">
