--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                     alt="Timbre Trodat 4911" >
                                 <div class="card-body text-center mb-5">
                                     <h5 class="card-title">Timbre Trodat 4911</h5>
-                                    <p class="card-text lead">CLP 11.500  All B 0</p>                       
+                                    <p class="card-text lead">CLP 11.500  Test3</p>                       
                                 </div>
                             
                         </div>
